--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -9358,7 +9358,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20200120102140098" list="Home" modified="20200120102140098" title="$:/StoryList">
+<div created="20200120105332321" list="Hypnomachie Home" modified="20200120105332321" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9418,8 +9418,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20200120102138606" title="$:/temp/search">
-<pre>quotes</pre>
+<div created="20190114084246125" modified="20200120105330030" title="$:/temp/search">
+<pre>hypn</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -10952,7 +10952,7 @@ Tyler1987
 
 </pre>
 </div>
-<div created="20190927134431065" modified="20191122164010152" tags="fiche_lecture" title="Hypnomachie">
+<div created="20190927134431065" modified="20200120105426227" tags="fiche_lecture" title="Hypnomachie">
 <pre>pré-rationnel -&gt; rationnel -&gt; trans-rationnel
 
 trans-rationnel = on garde la méthode scientifique, et on cherche à accepter rationnellement l'irrationnel
@@ -10977,7 +10977,126 @@ Simplement, pour ne rien promouvoir, il peut être pertinent de promouvoir à un
 * https://www.youtube.com/watch?v=HERuMx-nlvw
 
 ! https://www.youtube.com/watch?v=LRAXi3avGlI	28) Vers une épistémologie non dualiste : qu'est ce que l'on perd quand on gagne un débat
-</pre>
+
+_____________________________________________________
+
+Ce que je retiens de ces 2 échanges de commentaires c'est qu'effectivement on dirait que la demande de preuves/sources/arguments est utilisée pour s'éviter de réfléchir.
+Il n'y a que les expériences de 1re main qu'on peut se permettre de ne pas toujours remettre en doute, dans la limite du raisonnable. Le reste il y a toujours une probabilité non nulle que l'intermédiaire travestisse, volontairement ou non, l'information qu'il transmet.
+N'avez-vous donc jamais eu affaire à des situations un peu tendues où vous avez l'impression que tout le monde ment à tout le monde ? Parce que clairement dans ces situations là, si vous vous amusez à essayer de vérifier les infos qu'on vous donne, vous faites pas long feu.
+
+Corben Trashy Anthony Lombart je trouve ton commentaire interressant! 1-dans sa 1ere partie il nous projette vers un plan de reflexion interieure en modifiant notre orientation mentale de maniére a nous faire echapper au reflexe de comparaison/confrontation/ avec l'information de &quot;l'autre&quot;. Car pour moi tu induit que lorsque l'on demande une vérification/preuve (donc que l'on s'oppose a l'autre) et bien on passe en mode DEUX et on n'est plus centré sur soi puisqu'en opposition avec l'autre, on ne vit plus l'evenement/experience a partir de soi... 2-Dans le deuxieme paragraphe par contre tu bascules ton plan de vision du conscient en exposant une logique mentale d’appréhension de ton retex de l'empirisme efficace! TU reflechis d'aprés ce que tu percois ou peux percevoir alors qu'avant tu avais la possibilité de reflechir d'aprés ce que tu es 3-et ton troisiéme paragraphe est la traduction de l'application reflexe normal de l'humain standard qui retombe dans une conscience qui se met en mode comparatif/parrallele avec &quot;les autres&quot;, donc soumission a la mecanique de &quot;chute&quot; dans le conflit par le deux, le DIAble, la dualité! 4-ben ton premier paragraphe m'a permis une petite EPIPHANIE personnelle, je t'en remercie, bonne soirée.
+
+_____________________________________________________
+Trouvé sur le net sur un groupe lié à la F.M :
+
+Quelques questions susceptibles d'etre posées a l'adepte lors de son entrée en loge.
+
+Je vous propose de les examiner ensemble apres que vous aillez vu la vidéo 42 de la chaine :
+
+&quot;Qu’est-ce qui vous a amené à frapper à la porte de cette loge ?&quot;
+Peut sembler innocent mais il s'agit en fait d'une forme de ce qu'on appelle &quot;self-justification&quot; cad que la question implique ipso-facto un éspace-temps et une relation à soi monocausale/linéaire.
+Soit l'activation de certaines zones cérébrales par rapport à d'autres...Tout comme cela place l'adepte dans le champ d'un &quot;je&quot; separé, distinct.
+
+&quot;Si vous aviez plus de temps libre, comment l’occuperiez-vous ?&quot;
+L'on poursuit avec une injonction hypnotique sur le temps.
+En se focalisant sur l'aspect temporel, l'on masque la dissociation Soi réel/soi fantasmé qui approfondit la dissociation.
+En outre, l'on commence à installer le distingo temps sacré/temps profane (j'y reviendrais à l'avenir)
+
+&quot;Pourriez-vous citer un ouvrage, film ou œuvre d’art qui vous a marqué ? Pourquoi ?&quot;
+L'on pourrait y voir l’exaltation du pathos mais il ne s'agit pas non plus de tout voir selon un prisme machiavélique...Sachant qu'il est aussi question, simplement, de faire connaissance.
+Ceci dit le psychologue avertit y distingueras fort bien ce que certains appellent le &quot;trait principal&quot;
+
+&quot;Que vous évoque le triptyque Liberté, Egalité, Fraternité ?&quot;
+Est une façon de vérifier l’adhésion de l'adepte au dogme de la confrérie. Ce point peut etre éliminatoire.
+
+&quot;Qu’est-ce que vous souhaiteriez améliorer en vous ?&quot;
+Est quasiment une invitation à révéler ses traumas et autres &quot;portes d'entrées hypnotiques&quot;.
+En gros, a quel endroit du réel n'etes vous pas &quot;UN&quot; avec vous...
+
+&quot;Pensez-vous être un homme libre, si oui qu’est-ce qui vous permet de l’affirmer ?&quot;
+Est la suite logique du precedent.
+Un &quot;oui&quot; indiqueras un adepte sur un des extremes de la courbe de Gauss.
+Ou tres manipulable ou...dangereux pour l'organisation.
+
+&quot;Quelles sont vos principales valeurs ?&quot;
+Je reviendrais sur ce point dans l'avenir et sur l'illusion de la &quot;détermination des valeurs&quot; que l'on retrouve aussi en PNL/coaching.
+Si cela n'est pas mauvais en soit (rien n'est &quot;mauvais&quot; en soit), cela n'a du sens qu'à une certaine étape du parcours de l'adepte et cela permet de trianguler, avec les autres questions, a qui l'on a affaire.
+
+&quot;Que recherchez-vous en frappant ici ?&quot;
+Va permettre d'identifier les principaux &quot;manques&quot; et &quot;failles&quot; de l'adepte comme dans certains des points ci dessus.
+
+&quot;D’après vous, que faudrait-il pour que les gens se respectent mieux ?&quot;
+L'on continue la dissociation réel/idéal...dans le réel le respect/irrespect est une narration, un chat qui chie sur votre lit n'est pas dans l'irrespect. Il est juste ce qu'il est.
+Considérer que les gens ne se respectent pas, c'est projeter son propre irrespect du monde/réel sur le monde...or du &quot;centre du moyeu&quot; qui vous dit que ce qui Est, Est
+
+&quot;Quelle est la réalisation personnelle dont vous êtes le plus fier ? Pourquoi ?&quot;
+Apres les transes de dissociation, l'on recherche les leviers limbiques autour des transes d'identification
+
+&quot;Que pensez-vous apporter aux membres ici présents en entrant en Franc-maçonnerie ?&quot;
+Amplification de la confusion soi/autre dont je parlais dans la vidéo sur les chamans culturels (extrait avec Gros Tony) : si les membres sont dans l'amour, je n'ai pas a me vendre ni a &quot;mériter&quot;.
+Cela acte donc la présence d'une maltraitance intérieure quelque part.
+
+&quot;La tolérance est un des grands principes de la franc-maçonnerie. Qu’en pensez-vous ?&quot;
+&quot;La tolérance c'est (wikipédia) : tolérance, du latin tolerare (supporter) et tolerantia (endurance, patience, résignation), désigne la capacité à permettre ce que l'on désapprouve, c'est-à-dire ce que l'on devrait normalement refuser &quot;
+Ce qui est bien distinct de l'acceptation de la Tradition, le &quot;que ta volonté soit faite&quot;, ici encore, le chiffre &quot;2&quot; se retrouve pour tout observateur experimenté
+
+&quot;Pour vous, qu’est-ce que pratiquer la Justice au quotidien ?&quot;
+A l'instar des premières questions, on y retrouve l'injonction que ce qui est juste dépends du faire...Et que, par conséquent, le réel n'est pas juste...Ce qui renforce la dissociation avec l'unité du réel;..Voir aussi la &quot;justice de dieu&quot; telle que définie dans la vidéo sur la justice réstauratrice)
+
+&quot;Quelle définition donneriez-vous de la laïcité ? &quot;
+L'on vérifie a nouveau la conformité de l'adepte avec le dogme des F.M
+
+Alors si tout ceci n'a rien de condamnable EN SOIT (cela demande de bien réaliser qu'en deçà d'un certain niveau de réalité, l'immense majorité des gens se construisent eux memes sur des transes diverses et variées et que cela n'est pas- a priori- plus dangereux qu'un môme qui se rêve champion de la NBA), j'invite simplement a mettre de la conscience sur les mécanisme psychico-hypnotiques qui sont à l’œuvre derrière de telles approches linguistiques.
+
+Le choix des mots n'est JAMAIS neutre et possède TOUJOURS une composante idéologique.
+Poser sa conscience dessus, s'est se donner les moyens de ne pas servir de &quot;carburant humain&quot; à l'idéologie en question...
+
+En tous cas ceci illustre à merveille ce que j'essayais de partager avec vous sur le culte de la dualité chez les F.M...
+
+
+_____________________________________________________
+Attention , le theoreme d’arrow ne dit pas qu’il n’existe pas de democratie possible , il dit de façon plus nuançé qu’une selection de choix sociaux selon un « classement » ne garantis pas la democratie complete tel qu’il est annoncé dans ses hypotheses, il est à noté que ce theorem repose comme tout theoreme sur des predicats de base pour qu’il s’applique , suffit de changer la façon de faire le choix social d’un classement à une ponderation de point pour que tout le theoreme s’effondre ..
+Mais comme toute les democraties moderne se basent dans leurs systele de vote sur un classement par preference et que le systeme de vote par point n’a jamais vraiment été applique à grande , oui on est d’accord les systemes actuels ne permettent pas une democratie absolue !
+
+réponse de Bascar : 
+Je ne crois pas te connaitre, je suppose donc que tu es ici depuis peu, je t'invite à regarder ceci pour commencer : https://www.youtube.com/watch?v=zFUaK1uTm4E...
+
+&quot;Attention , le theoreme d’arrow ne dit pas qu’il n’existe pas de democratie possible&quot;
+En effet.
+D'ailleurs je n'ai pas dit que c'etait &quot; a cause du théoreme d'arrow qu'il n'y avait pas de démocratie possible&quot;
+
+&quot; il dit de façon plus nuançé qu’une selection de choix sociaux selon un « classement » ne garantis pas la democratie complete tel qu’il est annoncé dans ses hypotheses&quot;
+Comme tu y vas...&quot;démocratie complete&quot; qu'est ce que ca veut dire?
+Il y a démocratie ou pas.
+Il n'y a pas de &quot;démocratie complète&quot; avec jambon et fromage, la dictature, par exemple et pour reprendre un de ses 5 principes n'est pas une &quot;démocratie incomplète&quot;.
+Pourquoi euphémiser ainsi les choses?
+
+&quot; il est à noté que ce theorem repose comme tout theoreme sur des predicats de base pour qu’il s’applique&quot;
+Non, tu crois?
+Un systeme de pensée se baserait sur une axiomatique?
+Mais c'est révolutionnaire ca dis moi :)
+Ca n'est pas comme si je le disais ou y faisait référence dans une vidéo sur 2...
+
+&quot;suffit de changer la façon de faire le choix social d’un classement à une ponderation de point pour que tout le theoreme s’effondre ..&quot;
+Oui, c'est pour ca que ca n'est pas le seul argument derriere la phrase &quot;il n'y a pas de démocratie possible&quot;
+Ce que tu aurais compris si tu avais prit le temps de te connecter, de regarder mon travail et de faire de l'hypnomachie avant d'etre stimulé par ce que tu avais lu...
+Mais je commence à etre plus que blasé des réactions des uns et des autres qui viennent sur des groupes d'hypnomachie pour...ne pas en faire.
+
+Je te renvoie aussi à ma derniere vidéo bonus qui décrit bien le pattern de la &quot;réponse rapide&quot; sans prendre le temps d'adopter une pensée pondérée.
+C'est bien, tu connais le champ d'application du théoreme d'Arrow, tu sais que l'on peut le contourner via certaines procédures de condorcet.
+Autrement dit au niveau éxotérique tu as raison, au niveau mésotérique tu te trompes (au sens de &quot;se fourvoyer&quot;, pas au sens &quot;d'avoir tort&quot; ) puisque tu es repartit en &quot;oui mais&quot; sans accueillir ni te connecter, passant ainsi à coté du propos et illustrant pour la sempiternelle fois sur cette page le mécanisme que j'ai décris dans &quot;qu'est ce qu'on perd quand on gagne un débat&quot;, meme si, je te l'accorde, il n'y a guere eu &quot;débat&quot; ici.
+
+&quot; Mais comme toute les democraties moderne se basent dans leurs systele de vote sur un classement par preference et que le systeme de vote par point n’a jamais vraiment été applique à grande , oui on est d’accord les systemes actuels ne permettent pas une democratie absolue ! &quot;
+Alors déja oui.
+Ensuite, une nouvelle fois &quot;démocratie absolue&quot; est un terme étrange.
+Il y a ou pas démocratie.
+Il n'y a pas, et ca arrow l'a montré, de &quot;gradiant&quot; de démocratie, juste divers équilibres de Nash.
+
+Franchement à ce stade j'ai juste envie de te dire de prendre connaissance de mon travail tant je suis, ce soir dumoins, las de me repeter.
+
+Je te devine démocrate en phase de négociation.
+Saisit déja que &quot;peuple&quot; est un vortex sémantique.
+De la tu arriveras, peut etre, à te relier à ce que j'éxprime ce qui pourras nous donner une chance de dialoguer sur de meilleures bases qu'un &quot;oui mais&quot; dans lequel tu occultes tout ce que j'apporte dans ce post.</pre>
 </div>
 <div created="20190830154756419" modified="20190830154831001" tags="pedo fiche_lecture" title="Hypnomachie &amp; pedo">
 <pre>&lt;&lt;&lt;
@@ -11934,8 +12053,7 @@ linkedin =&gt; 1/20
 * https://perso.limsi.fr/pointal/python:accueil</pre>
 </div>
 <div created="20190529145620246" modified="20200120102156155" tags="quotes" title="Quotes, citations">
-<pre>
-&lt;&lt;&lt;
+<pre>&lt;&lt;&lt;
 &quot;Le propre du sage est de se gouverner soit même, sans vouloir gouverner les autres. De là il est clair que, ce ne seront pas les &quot;meilleurs&quot; qui gouverneront.&quot; Alain.
 &lt;&lt;&lt;
 
