--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -271,6 +271,8 @@ Error message and password prompt
 
 <li>En finir avec la bedaine, en 5 leçons</li>
 
+<li>english tips</li>
+
 <li>Entretien avec Aurélien Barrau sur la &quot;fin du monde&quot; annoncée</li>
 
 <li>Entropie</li>
@@ -9358,7 +9360,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20200120105332321" list="Hypnomachie Home" modified="20200120105332321" title="$:/StoryList">
+<div created="20200122121012906" list="[[Les 10 phrases positives à dire aux enfants]] Todo pw Home" modified="20200122123737594" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9418,8 +9420,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20200120105330030" title="$:/temp/search">
-<pre>hypn</pre>
+<div created="20190114084246125" modified="20200122123637343" title="$:/temp/search">
+<pre>todo</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -10602,6 +10604,70 @@ Alors, quelle activité privilégier pour perdre du ventre ? Tout dépendra en f
 
 - ''Pratiquez à plusieurs'' C’est en effet l’une des clés du succès. Et cela pour une raison très simple. Entre amis, voisins ou encore en famille, vous vous motiverez dès que l’un d’entre vous se découragera.</pre>
 </div>
+<div created="20200122122210343" modified="20200122122345257" tags="english" title="english tips">
+<pre>! yes
+* sure
+* of course
+* why not ?
+* no problem
+* i'd love that
+* you bet
+* absolutely
+* totally
+* definitely
+
+! no
+* i'm afraid not
+* not really
+* definitely not
+* of course not
+* no way
+
+! i don't know
+* (i have) no idea
+* i don't have a clue / i have no clue
+
+! how are you ?
+* how are you doing ?
+* how is it going ?
+* (are) you alright ?
+* how have you been ?
+* what's up ?
+* how are things ?
+* hi there, how's everything ?
+* what's going on ?
+
+! i'm fine TY
+* i'm good
+* i'm alright
+* i'm ok
+* i'm great
+* i'm very well
+
+! very
+* really
+* extremely
+
+! what ?
+* can you say that again ?
+* sorry ?
+* what was that ?
+* what did you just say ?
+* i beg your pardon ?
+* excuse me ?
+
+! goodby
+* bye ! bye-bye ! 
+* see you later
+* (i'll) see you soon
+* (i'll) see you around
+* take care
+* i gotta go
+* i'm off
+* i'll talk to you later
+* have a great day
+</pre>
+</div>
 <div created="20190605125111300" modified="20190605125203541" tags="fiche_lecture co2" title="Entretien avec Aurélien Barrau sur la &quot;fin du monde&quot; annoncée">
 <pre>https://www.youtube.com/watch?v=dfZT898ZClA
 
@@ -10823,19 +10889,23 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * photos ? (big)
 * useful code snippets</pre>
 </div>
-<div created="20190108105358377" modified="20200120104612989" tags="home current" title="Home">
-<pre>cute https://twitter.com/i_iove_nature
-
-! Daily
+<div created="20190108105358377" modified="20200122091455063" tags="home current" title="Home">
+<pre>! Daily
 * https://www.epicgames.com/store/ epicgames.osef.osef@xoxy.net 7/19
+* https://mail.yahoo.com
+* https://facebook.com/messages
+* https://www.youtube.com/feed/subscriptions
 
 ! Buy
 * https://www.jmcorda.com/fr/rituel-du-matin
 * https://www.jmcorda.com/fr/dominationbylove
 * https://www.gold.fr/cours-or-prix-de-l-or/napoleon-or-20-francs-louis-or/
 * https://www.gold.fr/comptoirs-achat-vente-or/nantes/
+* https://www.patreon.com/PigCakee
+* http://god.freevar.com/games/underrail.html
 
 ! current
+* https://protonvpn.com/free-vpn
 * ''https://tgdmb.com/'' The Gaming Den - Frank Trollman
 * ''HMM3 Horn of the Abyss '': http://www.jeuxvideo.com/forums/42-10531-55944943-1-0-1-0-heroes-of-might-magic-iii-mod-hd-horn-of-the-habyss-traduction.htm http://heroescommunity.com/viewthread.php3?TID=39830
 * ''Dink Smallwood'' https://www.rtsoft.com/pages/dink.php
@@ -10950,7 +11020,7 @@ Tyler1987
 	PART. 2:	https://www.youtube.com/watch?v=80lD1BdpsAM
 ```
 
-</pre>
+cute https://twitter.com/i_iove_nature</pre>
 </div>
 <div created="20190927134431065" modified="20200120105426227" tags="fiche_lecture" title="Hypnomachie">
 <pre>pré-rationnel -&gt; rationnel -&gt; trans-rationnel
@@ -12706,9 +12776,9 @@ Si ''information == !entropie'', et compte-tenu du caractère subjectif de l'ent
 * entropie, entropie de Shannon, information
 * théorie du chaos</pre>
 </div>
-<div created="20190130144237309" modified="20191016123416224" tags="" title="Todo">
+<div created="20190130144237309" modified="20200122123704860" tags="" title="Todo">
 <pre>* renouvellement vignette NGE : jusqu'au 31 mars 2020 https://mon.nge-nantes.fr/espace/stationnement
-* préparation Verino janvier/février ?
+* préparation Verino mars ?
 
 * recherche appart'/maison
 * utilisation formation continue CPF &gt; Permaculture ?
