--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -9360,7 +9360,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20200122121012906" list="[[Les 10 phrases positives à dire aux enfants]] Todo pw Home" modified="20200122123737594" title="$:/StoryList">
+<div created="20200123104032204" list="[[Quotes, citations]] Todo Home" modified="20200123155927226" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9420,8 +9420,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20200122123637343" title="$:/temp/search">
-<pre>todo</pre>
+<div created="20190114084246125" modified="20200123155925783" title="$:/temp/search">
+<pre>quot</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -10709,7 +10709,7 @@ http://jeanzin.fr/ecorevo/sciences/entropie.htm
 
 </pre>
 </div>
-<div created="20190410152123321" modified="20190520150345671" tags="epub todo" title="epub">
+<div created="20190410152123321" modified="20200123104100516" tags="epub todo resources" title="epub">
 <pre>* http://emmanuel.clement.free.fr/2016/10/28/un-epub-neutre.html
 * https://sigil-ebook.com/
 * https://addons.mozilla.org/fr/firefox/addon/epub/
@@ -10889,7 +10889,7 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * photos ? (big)
 * useful code snippets</pre>
 </div>
-<div created="20190108105358377" modified="20200122091455063" tags="home current" title="Home">
+<div created="20190108105358377" modified="20200123135039234" tags="home current" title="Home">
 <pre>! Daily
 * https://www.epicgames.com/store/ epicgames.osef.osef@xoxy.net 7/19
 * https://mail.yahoo.com
@@ -10903,6 +10903,22 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * https://www.gold.fr/comptoirs-achat-vente-or/nantes/
 * https://www.patreon.com/PigCakee
 * http://god.freevar.com/games/underrail.html
+
+! Ausy
+* https://monespace.ausy.fr/
+* https://intra.ausy.fr
+* https://webmail.ausy.fr/
+
+! Ressources
+* https://annuel.framapad.org/p/leno
+* https://github.com/lenopgm
+* http://leno.1fr1.net/
+
+! Food
+* https://myedenred.fr/
+* https://melchior.xcard.me
+
+
 
 ! current
 * https://protonvpn.com/free-vpn
@@ -10943,18 +10959,6 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * Jeu 3D LWJGL	https://www.youtube.com/watch?v=e2-Si7RAwG8&amp;list=PLq0CkcZATy26QgVPOGiuW8-FQICKJUf4D
 * Jeu 2D LWJGL	https://www.youtube.com/watch?v=o56B1O1WwBk&amp;list=PLq0CkcZATy27MgFJcy0HmMPVRwtDWeMlD
 
-! Ressources
-* https://annuel.framapad.org/p/leno
-* https://github.com/lenopgm
-* http://leno.1fr1.net/
-
-! Messaging
-* https://mail.yahoo.com
-* https://facebook.com/messages
-
-! Food
-* https://myedenred.fr/
-* https://melchior.xcard.me
 
 ```
 https://orientxxi.info/fr/video
@@ -11022,7 +11026,7 @@ Tyler1987
 
 cute https://twitter.com/i_iove_nature</pre>
 </div>
-<div created="20190927134431065" modified="20200120105426227" tags="fiche_lecture" title="Hypnomachie">
+<div created="20190927134431065" modified="20200123155915715" tags="fiche_lecture" title="Hypnomachie">
 <pre>pré-rationnel -&gt; rationnel -&gt; trans-rationnel
 
 trans-rationnel = on garde la méthode scientifique, et on cherche à accepter rationnellement l'irrationnel
@@ -11166,7 +11170,86 @@ Franchement à ce stade j'ai juste envie de te dire de prendre connaissance de m
 
 Je te devine démocrate en phase de négociation.
 Saisit déja que &quot;peuple&quot; est un vortex sémantique.
-De la tu arriveras, peut etre, à te relier à ce que j'éxprime ce qui pourras nous donner une chance de dialoguer sur de meilleures bases qu'un &quot;oui mais&quot; dans lequel tu occultes tout ce que j'apporte dans ce post.</pre>
+De la tu arriveras, peut etre, à te relier à ce que j'éxprime ce qui pourras nous donner une chance de dialoguer sur de meilleures bases qu'un &quot;oui mais&quot; dans lequel tu occultes tout ce que j'apporte dans ce post.
+
+
+____________________________________________________________
+
+&quot; certes, certes, l'écologie n'est ni de droite ni de gauche. Mais enfin surtout pas de droite&quot; Ajoutes Aurélien Barraut en publiant cette couverture.
+Cet homme réalise le tour de force d'amalgamer certitudes absolues, pensée mainstream le tout associé à une inculture qui ferait ré-examiner si l'on fait rentrer Eve Angeli Au Panthéon.
+
+Cette phrase est une caricature du &quot;bobo écolo&quot; persuadé d'appartenir au camp du &quot;bien&quot; et se permet de déterminer comment les autres devraient se comporter au nom d'un &quot;intérêt général&quot; qu'il est lui même incapable de définir.
+
+A ce que cela ne tienne, un doctorat (d'une discipline qui n'a rien à voir, c'est encore mieux), quelques amis dans le show biz et quelques bracelets brésilens et l'on est partit pour faire des buzzs faciles...et tant pis si l'on ne réalises meme pas la portée de ce que l'on dit.
+
+J'aurais attendu mieux d'un &quot;poète philosophe&quot; (ca n'est pas moi qui le qualifie ainsi, c'est wikipédia, si, si...)
+
+Historiquement, l'écologie, en tant que soumission à l'ordre naturel est une valeur éminemment conservatrice (et donc de droite) la ou le progressisme des lumières s'est toujours battit sur une tentative de dominer la nature par la technique (pilule, avortement, transexualité etc.)
+
+Les gens n'ont plus aucune culture historique...Ca n'est pas gravissime...
+Mais fort est de reconnaitre qu'au 21 eme siècle, il est plus aisé de proposer du pret à penser par des ingénieurs sociaux que de prendre le temps de lire et de se cultiver (meme si je ne doutes pas qu'il m'apprendrais bien des choses sur la gravitation quantique à boucles...un sujet sur lequel je n'aurais pas l'outrecuidance de lui dire quoi penser d'ailleurs...)
+
+Orwell, Idiocratie, nous y comme.
+Sa dernière honte doit être antérieure à sa dernière visite chez le coiffeur
+
+Alors bien sur, nous faisons tous des erreurs...
+Et comme disent les soufis, une fois, cela arrive, deux fois, ca n'est pas de chance...Trois fois, c'est qu'il y a quelque chose qui semble etre important à discerner.
+
+Et bien il s'agit justement du manque de discernement.
+
+En assimilant l'écologie à la Droite, Aurélien Barraut ne comprends pas que la notion de &quot;nature&quot;, qui n'a de sens que vis a vis de la notion de &quot;culture&quot;, est le socle de la pensée de droite qui modélise le réel via des filtres analytiques la ou la gauche va soutenir plutôt des narrations systémiques.
+
+C'est en vertu de ces memes narrations systémiques qu'il aimerais d'ailleurs que l'humanité change afin d'enrayer le réchauffement climatique.
+
+Ce qu'il appelles &quot;écologie&quot; en fait, dans une parfaite illustration de la pensée gnostique, c'est en fait, l'asservissement de la nature à sa vision idéalisée pré-pensée du réel. (comme abordé dans la vidéo 42 ainsi que de celle sur l'écologie)
+
+C'est un monde ou l'homme (ou dumoins l'oligarchie) deviens démiurge et s'arroge le droit de dire qui doit faire ou consommer tel ou tel chose.
+
+De ce point de vue, vous etes, Monsieur Barrau, tres cohérent.
+
+De la à appeler cela &quot;écologie&quot;, il y a certaines couleuvres que je ne puis me résoudre à avaler et ce meme si vous semblez sincère dans votre aveuglement (c'est le problème de la sur-éxposition aux &quot;lumières&quot; )
+
+En tous cas, a défaut de devenir un bouc-émissaire car je continue de caresser l'espoir d'une discussion constructive un jour, meme si vous esquivâmes mes propositions de discussion (ce que je comprends, vous n'avez rien à gagner à une discussion sur le fond avec un inconnu comme moi, qui plus est compétent en épistémologie ), vous entrez assurément dans le top 3 des personnes a qui j'offrirais volontiers une place à un de mes séminaires histoire que vous réalisiez simplement, à 46 ans, ce que vous dites.
+
+Du coup cela m'amuse ce top
+Qui y retrouverions nous?
+- Marlene Shiappa?
+- Axel de &quot;et tout le monde s'en fou&quot;?
+- Ludo &quot;d'osons causer&quot;?
+
+Je n'ai d'ordinaire rien contre l'inculture, la suffisance (je la pratique moi-meme régulièrement ), la bêtise ou les cheveux longs encore que, comme vous le discernez, ces 4 éléments ainsi intriqués m’amènent, ce soir, le temps d'un billet d'humeur, bien proche de ma limite du jour.
+
+Simplement lorsque cette inculture est ainsi livrée en masse à la population, dans une période de fin de civilisation, qui plus est à grand renforts de moyens médiatiques, je me sens profondément impuissant à rappeler à mes frères et mes sœurs qu'autre chose éxiste si iels (moi aussi je peut etre progressiste si je veut ) se donnent la peine de poser leur smartphone et, soyons fou, d'ouvrir un livre...
+
+A quand un Franck Dubosc/ Ribéri pour la présidentielle de 2022?
+Avec Zahia à la culture et Steevy à l'économie?
+
+Je me sent devant une telle saillie comme devant mon premier épisode de telétubbies, à la fois perplexe, sidéré et effrayé qu'un tel nivellement par le bas semble captiver l'attention.
+
+Si mes recherches m’amènent à saisir de mieux en mieux dans ma chair, a quelle point nous sommes collectivement descendus, mon habitude de voir le meilleur en chacun de mes frères est ici malmenée.
+
+Rassures toi Aurélien.
+Je vois d’où tu parles.
+
+Pour autant, tant qu'à appliquer des doctrines et idées élaborées par certains de nos &quot;frères&quot; entre deux colonnes, peut etre aurait tu put te rappeler, celle du silence.
+
+Tu cites sur ton mur
+Marina Tsvetaeva &quot;Ce n'est que l'éventualité d'une révolution qui me retient du suicide.&quot;
+Illustrant à merveille les thèses développées sur ma chaine : tu n'es pas mort à ton désir de contrôle et fuit ce vide de toi dans ces &quot;sous cadres hypnotiques&quot;.
+
+C'est en fait cela que je sens chez toi qui résonnes ainsi en moi...et me fait écrire ce pavé.
+C'est ta révolte que je ressens en miroir en moi quand je te lis.
+Nous sommes Un et il y a donc résonance.
+Pour autant je ne suis pas dupe de cette multiplicité apparente, elle n'est qu'illusion.
+
+Mais comment veut tu apprendre aux gens à Vivre si ta propre vie ne tiens qu'à une transe que tu projettes dans le futur?
+
+Je parlais de &quot;mage noir&quot; dans la vidéo 42.
+Nous en avons ici une version niveau 1 sans envergure...et qui ne produiras que des dégats limités.
+
+Comme disait Ayn Rand
+
+&quot;Votre peur de la mort n'est pas un amour de la Vie&quot;</pre>
 </div>
 <div created="20190830154756419" modified="20190830154831001" tags="pedo fiche_lecture" title="Hypnomachie &amp; pedo">
 <pre>&lt;&lt;&lt;
@@ -12122,9 +12205,14 @@ linkedin =&gt; 1/20
 
 * https://perso.limsi.fr/pointal/python:accueil</pre>
 </div>
-<div created="20190529145620246" modified="20200120102156155" tags="quotes" title="Quotes, citations">
+<div created="20190529145620246" modified="20200123155951666" tags="quotes" title="Quotes, citations">
 <pre>&lt;&lt;&lt;
 &quot;Le propre du sage est de se gouverner soit même, sans vouloir gouverner les autres. De là il est clair que, ce ne seront pas les &quot;meilleurs&quot; qui gouverneront.&quot; Alain.
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+Votre peur de la mort n'est pas un amour de la Vie - Ayn Rand
 &lt;&lt;&lt;
 
 
