--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -9360,7 +9360,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20200123104032204" list="[[Quotes, citations]] Todo Home" modified="20200123155927226" title="$:/StoryList">
+<div created="20200130124149440" list="Home" modified="20200130150957077" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9420,8 +9420,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20200123155925783" title="$:/temp/search">
-<pre>quot</pre>
+<div created="20190114084246125" modified="20200130150828706" title="$:/temp/search">
+<pre>todo</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -9599,7 +9599,7 @@ Error message and password prompt
 * témoignage ovni louis XV	&gt; 	http://www.sciences-faits-histoires.com/blog/ovni-ufo/ovnis-dans-l-histoire-les-16-et-17ieme-siecles.html
 </pre>
 </div>
-<div created="20190814110557224" modified="20190814111115705" tags="fiche_lecture corda todo" title="Bande sur commande">
+<div created="20190814110557224" modified="20200130144547769" tags="fiche_lecture corda todo" title="Bande sur commande">
 <pre>! ''2 mois :''
 * 1ej /semaine
 * 1 reset corporel /semaine
@@ -9623,6 +9623,16 @@ Error message and password prompt
 * expiré: tenir son souffle : rentrer ventre au max / remonter diaphragme vers le haut / presser/masser ses côtes &quot;aussi profondément &amp; longtemps que tu peux&quot;
 * reprendre son souffle (30s)
 * 2x
+
+! rafraichissement prostatique V2 :
+* 20 squatts
+* pompes claquées / normales / genoux 'à l'échec' (= jusqu'à peux plus)
+* 60s respiration
+* 1 longue inspiration profonde : ventre / pecs / épaules roulées
+* 1 expiration crapaud complète squatt
+* apnée : rentrer ventre au max + remonter diaphragme
+* malaxer le bide massage violent ventre en apnée
+* 45s &amp; recommencer
 </pre>
 </div>
 <div created="20190301161735984" modified="20190301161750250" tags="bayes" title="Bayes" type="">
@@ -10709,14 +10719,17 @@ http://jeanzin.fr/ecorevo/sciences/entropie.htm
 
 </pre>
 </div>
-<div created="20190410152123321" modified="20200123104100516" tags="epub todo resources" title="epub">
+<div created="20190410152123321" modified="20200130150919294" tags="epub todo resources" title="epub">
 <pre>* http://emmanuel.clement.free.fr/2016/10/28/un-epub-neutre.html
 * https://sigil-ebook.com/
 * https://addons.mozilla.org/fr/firefox/addon/epub/
 * https://addons.mozilla.org/fr/firefox/addon/epub-read-the-web-offline/
 
 * https://www.ebook-gratuit.co/category/science-fiction/
-* https://www.gutenberg.org/ebooks/</pre>
+* https://www.gutenberg.org/ebooks/
+
+* https://www.ebooksgratuits.com/ebooks.php
+* https://www.e-reading.club/</pre>
 </div>
 <div created="20190814131011509" modified="20190814144138337" tags="fiche_lecture corda todo" title="Erection en béton">
 <pre>! le muscle PC
@@ -10889,20 +10902,36 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * photos ? (big)
 * useful code snippets</pre>
 </div>
-<div created="20190108105358377" modified="20200123135039234" tags="home current" title="Home">
+<div created="20190108105358377" modified="20200130150801222" tags="home current" title="Home">
 <pre>! Daily
-* https://www.epicgames.com/store/ epicgames.osef.osef@xoxy.net 7/19
+* https://www.epicgames.com/store/en-US/free-games epicgames.osef.osef@xoxy.net 7/19
 * https://mail.yahoo.com
 * https://facebook.com/messages
 * https://www.youtube.com/feed/subscriptions
+* [[pw]]
+
+! TODO
+* ''AUSY: ATTESTATION TITRE DE TRANSPORT''
+* ''extract leno.1fr1.net''
+* [[Torrent]]
+* ''Talend | Norsys''
+* Adrastia https://www.youtube.com/channel/UCprmhr8rfvlFpuSmv-QOEgA/videos
+* Le Lobby https://orientxxi.info/fr/video
+* Remember Me (Alain Damasio) https://www.youtube.com/watch?v=zq0oYmBJ3hs
+* ''Turing indéterminabilité de l'arrêt / Incomplétude de Goedel / caractère fini de la connaissance''
+* Litobox musculation à poids de corps
+* listen : Silencer Death Pierce Me
 
 ! Buy
-* https://www.jmcorda.com/fr/rituel-du-matin
-* https://www.jmcorda.com/fr/dominationbylove
+* https://www.jmcorda.com/fr/rituel-du-matin 
+* https://www.jmcorda.com/fr/dominationbylove ''https://www.jmcorda.com/fr/dominationbylove?infos=dbl.x.osef%40xoxy.net%2C5e32d7afd5748%2CZjdkMDM0OTliYzU2MDEwOWNlZjVlM2M1NzNkMDZhMjBjMWViOWRlYQ%3D%3D''
 * https://www.gold.fr/cours-or-prix-de-l-or/napoleon-or-20-francs-louis-or/
 * https://www.gold.fr/comptoirs-achat-vente-or/nantes/
 * https://www.patreon.com/PigCakee
 * http://god.freevar.com/games/underrail.html
+# https://uptobox.com/p81f5mqn08h8
+# https://uptobox.com/cr7t5fphrnva
+# https://uptobox.com/lt75stmwioia
 
 ! Ausy
 * https://monespace.ausy.fr/
@@ -10940,19 +10969,6 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * https://prototypekblog.wordpress.com/2019/04/24/un-jour-tout-cela-semblera-ridicule/
 * podcasts Julia Galef http://rationallyspeakingpodcast.org/
 
-! TODO
-* ''AUSY: ATTESTATION TITRE DE TRANSPORT''
-* ''AUSY: Bonus CE''
-* ''AUSY: RTT''
-* ''extract leno.1fr1.net''
-* ''Adrastia'' https://www.youtube.com/channel/UCprmhr8rfvlFpuSmv-QOEgA/videos
-* ''Le Lobby'' https://orientxxi.info/fr/video
-* Remember Me (Alain Damasio) https://www.youtube.com/watch?v=zq0oYmBJ3hs
-* ''Turing indéterminabilité de l'arrêt / Incomplétude de Goedel / caractère fini de la connaissance''
-* Litobox musculation à poids de corps
-* Talend | Norsys
-* listen : Silencer Death Pierce Me
-* listen : Cavetown
 
 ! ''Java dev jeu''
 * https://www.lwjgl.org/
@@ -11295,7 +11311,7 @@ Je te laisse en tirer tes propres conclusions selon que tu plafonnes en prérati
 
 </pre>
 </div>
-<div created="20190524134214903" modified="20190524144633759" tags="todo" title="ideas">
+<div created="20190524134214903" modified="20200130150945005" tags="todo magic" title="ideas">
 <pre>! Magic : routine tips
 * jeu du rond
 * false transfert / french drop + &quot;tiens ma pièce&quot;
@@ -12205,8 +12221,17 @@ linkedin =&gt; 1/20
 
 * https://perso.limsi.fr/pointal/python:accueil</pre>
 </div>
-<div created="20190529145620246" modified="20200123155951666" tags="quotes" title="Quotes, citations">
-<pre>&lt;&lt;&lt;
+<div created="20190529145620246" modified="20200130144902092" tags="quotes" title="Quotes, citations">
+<pre>
+&lt;&lt;&lt;
+* Être Un avec ce qui Est
+* Ne relève pas du faire
+* Puisque déjà là
+(Eclats de silence de Daniel Morin)
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
 &quot;Le propre du sage est de se gouverner soit même, sans vouloir gouverner les autres. De là il est clair que, ce ne seront pas les &quot;meilleurs&quot; qui gouverneront.&quot; Alain.
 &lt;&lt;&lt;
 
@@ -12894,17 +12919,17 @@ Pierre Kropotkine
 
 </pre>
 </div>
-<div created="20190424130007767" modified="20200113153241210" tags="todo torrent download" title="Torrent">
+<div created="20190424130007767" modified="20200130145502392" tags="todo torrent download" title="Torrent">
 <pre>! Misc
 * Erasemybackpain / Back to Life : https://www.erasemybackpain.com/ https://www.youtube.com/watch?v=Fr2dGwCfNaY
-* JM Corda / Sexworkout : https://www.jmcorda.com/fr/  sextao
 * http://www.dm360inc.com/samples/ilv.pdf 
 
 ! Jeux
-* Worms Armageddon
+* ''Underrail''
 * Mass Effect
 
 ! Films
+* La Belle Verte https://vloggers.social/videos/watch/76011c74-2a6c-4da0-b277-3568c4d0f2ad
 * ''La Planète des Singes''
 * ''Les Autres / Los Otros / The Others Alejandro Amenábar''
 * ''Les Enfants du Temps - Makoto Shinkai''
@@ -12914,6 +12939,7 @@ Pierre Kropotkine
 * Le magicien des mensonges Robert de Niro
 
 ! Séries
+* ''Chernobyl''
 * ''The OA''
 * ''Aletered Carbon''
 * Starwars Rebels
@@ -13234,7 +13260,7 @@ Le pire, c'est que je m'estime heureux que c'en soit resté là.
 Je m'estime heureux !
 Ce pays est fucked up.</pre>
 </div>
-<div created="20190108085325311" modified="20190201155125598" tags="todo" title="Week">
+<div created="20190108085325311" modified="20200130151036781" tags="todo flow" title="Week">
 <pre>! 1
 * todo
 * http://catavatar.ml/
